--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">   <link rel="stylesheet" href="./css/styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
  
@@ -352,11 +353,10 @@
                   <a class="footer-social-link" href="https://ua.linkedin.com/" target="_blank">
                     <svg class="media-icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                   </a>
-                </li>
+                  </li>
               </ul> 
             </div> 
-          </ul> 
-      </div>
+        </div>
     </footer>
 </body>
 </html>
